# unexicon-system

./: .gitignore  00-nm  10-ferm  10-myradeon.conf.save  18-bird  19-zebra  20-babel  20-ospf  20-ospf6  20-rip  20-ripng  30-hostname  35-ntp  37-nis  39-lldp  50-geoip  80-net-setup-link.rules  99-unexicon-autoipd.rules  99-unexicon-dhcpcd.rules  99-unexicon-ifplugd.rules  99-unexicon-wpa_supplicant.rules  99-xtra-systemd.rules  AUTHORS  ChangeLog  Makefile.am  NEWS  NOTES  NetworkManager.conf  PKGBUILD  README.in  README.md  README.md.in  RELEASE.md  XX-template  accel-ppp.conf  arch-release  aurgetrc  auth-down  auth-up  auto.master  (+109 more)
